problems with projects section (overlapped hobbies section in mobile) resolved. Edited layout for contacts section.

--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ font-family: 'Libre Franklin', sans-serif;
     margin:30px;
     opacity:0.7;
     border:none;
+    transition-duration:1s;
    
 }
 
@@ -122,7 +123,7 @@ font-family: 'Libre Franklin', sans-serif;
 #projects{
     background-image:url(image/bg/circuits.jpg);
     background-size:cover;
-    height:1030px;
+    height:auto;
     padding:0px;
     
 }
